// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppController (e2e) Check that all message receive are good 1`] = `
Array [
  Object {
    "type": "connection_ack",
  },
  Object {
    "id": 1,
    "payload": Object {
      "data": Object {
        "transactionAdded": Object {
          "after": Object {
            "label": "Mon texte 1",
            "type": "text",
          },
          "before": null,
          "type": "line",
          "user": Object {
            "_id": "demo2",
          },
        },
      },
    },
    "type": "data",
  },
  Object {
    "id": 1,
    "payload": Object {
      "data": Object {
        "transactionAdded": Object {
          "after": Object {
            "label": "Mon texte 3",
            "type": "text",
          },
          "before": null,
          "type": "line",
          "user": Object {
            "_id": "demo2",
          },
        },
      },
    },
    "type": "data",
  },
]
`;

exports[`AppController (e2e) Create line, text 1`] = `
Object {
  "createLine": Object {
    "__typename": "WalletLine",
  },
}
`;

exports[`AppController (e2e) Create line, text 2`] = `
Object {
  "createLine": Object {
    "__typename": "WalletLine",
  },
}
`;

exports[`AppController (e2e) Create line, text 3`] = `
Object {
  "createLine": Object {
    "__typename": "WalletLine",
  },
}
`;

exports[`AppController (e2e) Login the user 1 1`] = `
Object {
  "__typename": "ConnectionInformation",
  "token": Any<String>,
  "user": Object {
    "_id": "demo2",
    "encryption": Object {
      "authTag": "dGVzdA==",
      "content": "dGVzdA==",
      "iv": "dGVzdA==",
      "salt": "dGVzdA==",
    },
  },
}
`;

exports[`AppController (e2e) Login the user 2 1`] = `
Object {
  "__typename": "ConnectionInformation",
  "token": Any<String>,
  "user": Object {
    "_id": "demo3",
    "encryption": Object {
      "authTag": "dGVzdA==",
      "content": "dGVzdA==",
      "iv": "dGVzdA==",
      "salt": "dGVzdA==",
    },
  },
}
`;

exports[`AppController (e2e) Register user 1 1`] = `
Object {
  "__typename": "User",
  "_id": "demo2",
}
`;

exports[`AppController (e2e) Register user 2 1`] = `
Object {
  "__typename": "User",
  "_id": "demo3",
}
`;
